--- a/manifest.json
+++ b/manifest.json
@@ -8,15 +8,18 @@
   "content_scripts": [
     {
       "matches": ["*://medium.com/*"],
-      "js": ["js/jquery-3.6.4.min.js","content.js","medium/content_medium.js", "js/popper.js"],
-      "css": ["css/brands.css", "css/fontawesome.css", "css/solid.css", "css/gpt_content.css", "css/bootstrap.min.css",
-        "css/bootstrap-icons.css", "css/key.css", "css/modals.css", "css/popover.min.css"]
+      "js": ["js/webcomponents-sd-ce.js","js/jquery-3.6.4.min.js", "js/bootstrap.bundle.min.js","gpt-connector.js","common_content.js","medium/content.js"],
+      "css": ["css/gpt_content.css", "css/bootstrap.min.css", "css/key.css", "css/modals.css"]
     },
     {
       "matches": ["*://*.linkedin.com/*"],
-      "js": ["js/webcomponents-sd-ce.js","js/jquery-3.6.4.min.js","content.js","linkedin/content_linkedin.js", "js/bootstrap.bundle.min.js", "js/bootstrap.min.js"],
-      "css": ["css/brands.css", "css/fontawesome.css", "css/solid.css", "css/gpt_content.css", "css/bootstrap.min.css",
-        "css/bootstrap-icons.css", "css/key.css", "css/modals.css", "css/popover.min.css"]
+      "js": ["js/webcomponents-sd-ce.js","js/jquery-3.6.4.min.js", "js/bootstrap.bundle.min.js","gpt-connector.js","common_content.js", "linkedin/content.js"],
+      "css": [ "css/gpt_content.css", "css/bootstrap.min.css", "css/key.css", "css/modals.css"]
+    },
+    {
+      "matches": ["*://*.twitter.com/*"],
+      "js": ["js/webcomponents-sd-ce.js","js/jquery-3.6.4.min.js", "js/bootstrap.bundle.min.js","gpt-connector.js","common_content.js", "twitter/content.js"],
+      "css": [ "css/gpt_content.css", "css/bootstrap.min.css", "css/key.css", "css/modals.css"]
     }
   ],
   "permissions": [
@@ -31,7 +34,7 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": [ "/images/*", "/css/*", "/svgs/*", "/webfonts/*", "/bootstrap-icons-1.10.3/*", "/pages/*", "/js/popper.js"],
+      "resources": ["/css/*", "/pages/*"],
       "matches": [ "*://*/*" ]
     }
   ],
