--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     {
       "matches": ["*://*/*"],
       "js": ["js/webcomponents-sd-ce.js","js/jquery-3.6.4.min.js","gpt-connector.js","common_content.js"],
-      "css": ["css/gpt_content.css", "css/bootstrap.min.css", "css/bootstrap-icons.css", "css/modals.css"]
+      "css": ["css/gpt_content.css"]
     }
   ],
   "icons": {
