--- a/manifest.json
+++ b/manifest.json
@@ -7,9 +7,17 @@
   "name": "AI NoteMaker",
   "content_scripts": [
     {
-      "matches": ["*://*/*"],
-      "js": ["js/webcomponents-sd-ce.js","js/jquery-3.6.4.min.js","gpt-connector.js","common_content.js"],
+      "matches": ["*://mail.google.com/*"],
+      "js": ["js/webcomponents-sd-ce.js","js/jquery-3.6.4.min.js","gpt-connector.js","gmail/prompt_entry_handler.js","common_content.js"],
       "css": ["css/gpt_content.css"]
+    },
+    {
+      "matches": ["<all_urls>"],
+      "js": ["js/webcomponents-sd-ce.js","js/jquery-3.6.4.min.js","gpt-connector.js","prompt_entry_handler.js","common_content.js"],
+      "css": ["css/gpt_content.css"],
+      "exclude_matches": [
+        "*://mail.google.com/*"
+      ]
     }
   ],
   "icons": {
